--- a/public/templates/product-details.html
+++ b/public/templates/product-details.html
@@ -9,11 +9,11 @@
             </div>
             <div class="col-sm-offset-2 col-sm-3">
                 <div ng-if="!edit"><label>Inside Case #:</label> {{details.inCase.case}}</div>
-                <div ng-if="edit"><label>Inside Case #:</label> <input class="form-input" type="text" ng-model="details.inCase.case"/></div>
+                <div ng-if="edit"><label>Inside Case #:</label> <input class="form-control" type="text" ng-model="details.inCase.case"/></div>
             </div>
             <div class="col-sm-3">
                 <div ng-if="!edit"><label>Quantity in Case:</label> {{details.inCase.quantity}}</div>
-                <div ng-if="edit"><label>Quantity in Case:</label> <input class="form-input" type="text" ng-model="details.inCase.quantity"/></div>
+                <div ng-if="edit"><label>Quantity in Case:</label> <input class="form-control" type="text" ng-model="details.inCase.quantity"/></div>
             </div>
             <div class="col-sm-1 pull-right">
                 <button type="button" class="btn btn-xs btn-warning edit-icon" ng-hide="edit" ng-click="edit = !edit">Edit</button>
@@ -23,11 +23,11 @@
         <div class="row">
             <div class="col-sm-5">
                 <div ng-if="!edit"><label>Name:</label> {{details.name}}</div>
-                <div ng-if="edit"><label>Name:</label> <input class="form-input" type="text" ng-model="details.name"/></div>
+                <div ng-if="edit"><label>Name:</label> <input class="form-control" type="text" ng-model="details.name"/></div>
             </div>
             <div class="col-sm-7">
                 <div ng-if="!edit"><label>Description:</label> {{details.description}}</div>
-                <div ng-if="edit"><label>Description:</label> <textarea class="form-input" row="4" ng-model="details.description"/></div>
+                <div ng-if="edit"><label>Description:</label> <textarea class="form-control" row="4" ng-model="details.description"/></div>
             </div>
         </div>
 
