--- a/public/templates/case-details.html
+++ b/public/templates/case-details.html
@@ -18,11 +18,11 @@
         <div class="row">
             <div class="col-sm-5">
                 <div ng-if="!edit"><label>Name:</label> {{details.name}}</div>
-                <div ng-if="edit"><label>Name:</label> <input class="form-input" type="text" ng-model="details.name"/></div>
+                <div ng-if="edit"><label>Name:</label> <input class="form-control" type="text" ng-model="details.name"/></div>
             </div>
             <div class="col-sm-7">
                 <div ng-if="!edit"><label>Description:</label> {{details.description}}</div>
-                <div ng-if="edit"><label>Description:</label> <textarea class="form-input" row="4" ng-model="details.description"/></div>
+                <div ng-if="edit"><label>Description:</label> <textarea class="form-control" row="4" ng-model="details.description"/></div>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
                 <thead>
                     <tr>
                         <th><h4>Asset Tag</h4></th>
-                        <th><h4>Product</h4></th>
+                        <th><h4>Name</h4></th>
                         <th><h4>Description</h4></th>
                     </tr>
                 </thead>
