--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -20,9 +20,10 @@
                                 <h3>Product List</h3>
                             </div>
                             <div class="col-sm-4">
-                                <!--<div id="productSearch" class="dataTables_filter">
-                                    <label>Search:<input type="search" class="form-control input" ng-model="search"></label>
-                                </div>-->
+                                <div class="input-group btn-block">
+                                    <span class="input-group-addon" id="productSearch">Search Products:</span>
+                                    <input type="text" class="form-control input-lg" placeholder="Product Lookup" aria-describedby="productSearch" ng-model="productSearchTerm" ng-change="productSearch()" ng-model-options="{ debounce: 500 }"></input>
+                                </div>
                             </div>
                         </div>
                     </div>
