--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,9 +1,7 @@
 <div>
     <!-- Content Header (Page header) -->
     <section class="content-header">
-        <h1>
-            Login
-        </h1>
+        <h1>Login</h1>
         <ol class="breadcrumb">
             <li class="active">Login</li>
         </ol>
