--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -1,9 +1,6 @@
 <div>
     <section class="content-header">
-        <h1>
-            Products
-            <small>Product List</small>
-        </h1>
+        <h1>Products</h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
             <li class="active">Products</li>
