--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -1,9 +1,6 @@
 <div>
     <section class="content-header">
-        <h1>
-            Cases
-            <small>Case Management</small>
-        </h1>
+        <h1>Cases</h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i>Home</a></li>
             <li class="active">Cases</li>
