better error messages on screen

--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -42,7 +42,7 @@
                                         <td>{{case.description}}</td>
                                     </tr>
                                     <tr ng-if="tableError">
-                                        <td colspan="3">There was an error retrieving cases and totes.</td>
+                                        <td colspan="3">{{errorText}}</td>
                                     </tr>
                                 </tbody>
                             </table>
