--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -34,7 +34,7 @@
                                         <td>{{order.productName}}</td>
                                     </tr>
                                     <tr ng-if="tableError">
-                                        <td colspan="4">No Recent Orders available.</td>
+                                        <td colspan="4">{{errorText}}</td>
                                     </tr>
                                 </tbody>
                             </table>
